Image in Side Bar to test Image Scale

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla. Nullam quis risus eget urna mollis ornare vel eu leo. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
       </div>
       <div id="sidebar">
-        Banana
+        <img src="images/FunnyCow.jpg" alt="Funny Cow" />
       </div>
     </div>
     
