--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="js/fontscale.js"></script>
+    <!--<script src="js/fontscale.js"></script>-->
     <script type="text/javascript">
     
     </script>
